// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScheduleDirectionTest can render green line 1`] = `
<Provider>
  <ScheduleDirection>
    <div
      className="m-schedule-direction"
    >
      <div
        className="m-schedule-direction__direction"
        id="direction-name"
      >
        Eastbound
      </div>
      <ScheduleDirectionMenu>
        <div
          className="js-m-schedule-click-boundary"
        >
          <GreenLineSelect>
            <div
              className="m-schedule-direction__route-pattern m-schedule-direction__route-pattern--clickable notranslate"
              onClick={[Function]}
              onKeyUp={[Function]}
              role="button"
              tabIndex={0}
            >
               
              <span
                aria-hidden="true"
                className="notranslate c-svg__icon m-schedule-direction__route-pattern-arrow"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "SVG",
                  }
                }
              />
            </div>
          </GreenLineSelect>
        </div>
      </ScheduleDirectionMenu>
      <ScheduleDirectionButton>
        <button
          className="m-schedule-direction__button btn btn-primary"
          onClick={[Function]}
          type="button"
        >
          <span
            aria-hidden="true"
            className="notranslate m-schedule-direction__icon"
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
          />
          Change Direction
        </button>
      </ScheduleDirectionButton>
    </div>
  </ScheduleDirection>
</Provider>
`;

exports[`ScheduleDirectionTest renders a CR component 1`] = `
<Provider>
  <ScheduleDirection>
    <div
      className="m-schedule-direction"
    >
      <div
        className="m-schedule-direction__direction"
        id="direction-name"
      >
        Inbound
      </div>
      <ScheduleDirectionMenu>
        <div
          className="js-m-schedule-click-boundary"
        >
          <div
            className="m-schedule-direction__route-pattern notranslate"
          >
            End
          </div>
        </div>
      </ScheduleDirectionMenu>
      <ScheduleDirectionButton>
        <button
          className="m-schedule-direction__button btn btn-primary"
          onClick={[Function]}
          type="button"
        >
          <span
            aria-hidden="true"
            className="notranslate m-schedule-direction__icon"
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
          />
          Change Direction
        </button>
      </ScheduleDirectionButton>
    </div>
    <LineDiagram>
      <div
        className="mb-4"
      >
        <h3
          className="m-schedule-diagram__heading"
        >
          Stations
        </h3>
        <SearchBox>
          <div
            className="m-schedule-diagram__filter c-form__input-container"
          >
            <label
              className="sr-only"
              htmlFor="stop-search"
            >
              Search for a station
            </label>
            <input
              className="c-form__input"
              id="stop-search"
              onChange={[Function]}
              placeholder="Search for a station"
              type="text"
              value=""
            />
            <button
              aria-label="search"
              className="c-form__submit-btn"
              onClick={[Function]}
              type="button"
            >
              <span
                aria-hidden="false"
                className="notranslate c-svg__icon-search-reverse-default"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "SVG",
                  }
                }
              />
            </button>
          </div>
        </SearchBox>
        <Provider>
          <LineDiagramWithStops>
            <div
              className="m-schedule-diagram"
            >
              <SimpleDiagram>
                <svg
                  aria-labelledby="diagram-title diagram-desc"
                  className="line-diagram-svg commuter-rail"
                  height="100%"
                  role="img"
                  style={
                    Object {
                      "left": 5,
                      "overflow": "visible",
                    }
                  }
                  width="36px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title
                    id="diagram-title"
                  >
                    Line diagram for 
                    route 1
                  </title>
                  <desc
                    id="diagram-desc"
                  >
                    0 stops going Inbound to End
                  </desc>
                  <defs>
                    <pattern
                      height="10"
                      id="diagonalHatch"
                      patternTransform="rotate(45 0 0)"
                      patternUnits="userSpaceOnUse"
                      width="10"
                    >
                      <line
                        className="line-diagram-svg__line"
                        strokeWidth="16px"
                        y2={8}
                      />
                    </pattern>
                  </defs>
                </svg>
              </SimpleDiagram>
              <ol />
              <OtherStopList />
            </div>
          </LineDiagramWithStops>
        </Provider>
      </div>
    </LineDiagram>
  </ScheduleDirection>
</Provider>
`;

exports[`ScheduleDirectionTest renders a bus component 1`] = `
<Provider>
  <ScheduleDirection>
    <div
      className="m-schedule-direction"
    >
      <div
        className="m-schedule-direction__direction"
        id="direction-name"
      >
        Inbound
      </div>
      <ScheduleDirectionMenu>
        <div
          className="js-m-schedule-click-boundary"
        >
          <BusMenuSelect>
            <div
              className="m-schedule-direction__route-pattern notranslate"
              onClick={[Function]}
              onKeyUp={[Function]}
            >
              Pattern 2
               
            </div>
          </BusMenuSelect>
        </div>
      </ScheduleDirectionMenu>
      <ScheduleDirectionButton>
        <button
          className="m-schedule-direction__button btn btn-primary"
          onClick={[Function]}
          type="button"
        >
          <span
            aria-hidden="true"
            className="notranslate m-schedule-direction__icon"
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
          />
          Change Direction
        </button>
      </ScheduleDirectionButton>
    </div>
    <LineDiagram>
      <div
        className="mb-4"
      >
        <h3
          className="m-schedule-diagram__heading"
        >
          Stops
        </h3>
        <SearchBox>
          <div
            className="m-schedule-diagram__filter c-form__input-container"
          >
            <label
              className="sr-only"
              htmlFor="stop-search"
            >
              Search for a stop
            </label>
            <input
              className="c-form__input"
              id="stop-search"
              onChange={[Function]}
              placeholder="Search for a stop"
              type="text"
              value=""
            />
            <button
              aria-label="search"
              className="c-form__submit-btn"
              onClick={[Function]}
              type="button"
            >
              <span
                aria-hidden="false"
                className="notranslate c-svg__icon-search-reverse-default"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "SVG",
                  }
                }
              />
            </button>
          </div>
        </SearchBox>
        <Provider>
          <LineDiagramWithStops>
            <div
              className="m-schedule-diagram"
            >
              <SimpleDiagram>
                <svg
                  aria-labelledby="diagram-title diagram-desc"
                  className="line-diagram-svg bus"
                  height="100%"
                  role="img"
                  style={
                    Object {
                      "left": 5,
                      "overflow": "visible",
                    }
                  }
                  width="36px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title
                    id="diagram-title"
                  >
                    Line diagram for 
                    route 1
                  </title>
                  <desc
                    id="diagram-desc"
                  >
                    0 stops going Inbound to End
                  </desc>
                  <defs>
                    <pattern
                      height="10"
                      id="diagonalHatch"
                      patternTransform="rotate(45 0 0)"
                      patternUnits="userSpaceOnUse"
                      width="10"
                    >
                      <line
                        className="line-diagram-svg__line"
                        strokeWidth="16px"
                        y2={8}
                      />
                    </pattern>
                  </defs>
                </svg>
              </SimpleDiagram>
              <ol />
              <OtherStopList />
            </div>
          </LineDiagramWithStops>
        </Provider>
      </div>
    </LineDiagram>
  </ScheduleDirection>
</Provider>
`;

exports[`ScheduleDirectionTest renders a subway component 1`] = `
<Provider>
  <ScheduleDirection>
    <div
      className="m-schedule-direction"
    >
      <div
        className="m-schedule-direction__direction"
        id="direction-name"
      >
        Inbound
      </div>
      <ScheduleDirectionMenu>
        <div
          className="js-m-schedule-click-boundary"
        >
          <div
            className="m-schedule-direction__route-pattern notranslate"
          >
            End
          </div>
        </div>
      </ScheduleDirectionMenu>
      <ScheduleDirectionButton>
        <button
          className="m-schedule-direction__button btn btn-primary"
          onClick={[Function]}
          type="button"
        >
          <span
            aria-hidden="true"
            className="notranslate m-schedule-direction__icon"
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
          />
          Change Direction
        </button>
      </ScheduleDirectionButton>
    </div>
  </ScheduleDirection>
</Provider>
`;

exports[`ScheduleDirectionTest renders with a static map 1`] = `
<Provider>
  <ScheduleDirection>
    <div
      className="m-schedule-direction"
    >
      <div
        className="m-schedule-direction__direction"
        id="direction-name"
      >
        Inbound
      </div>
      <ScheduleDirectionMenu>
        <div
          className="js-m-schedule-click-boundary"
        >
          <div
            className="m-schedule-direction__route-pattern notranslate"
          >
            End
          </div>
        </div>
      </ScheduleDirectionMenu>
      <ScheduleDirectionButton>
        <button
          className="m-schedule-direction__button btn btn-primary"
          onClick={[Function]}
          type="button"
        >
          <span
            aria-hidden="true"
            className="notranslate m-schedule-direction__icon"
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
          />
          Change Direction
        </button>
      </ScheduleDirectionButton>
    </div>
    <img
      alt="route 1 route map"
      className="img-fluid"
      src="http://example.com/map.png"
    />
    <a
      href="http://example.com/map.pdf"
      rel="noopener noreferrer"
      target="_blank"
    >
      <i
        aria-hidden="true"
        className="fa fa-search-plus"
      />
      View map as a PDF
    </a>
    <LineDiagram>
      <div
        className="mb-4"
      >
        <h3
          className="m-schedule-diagram__heading"
        >
          Stops
        </h3>
        <SearchBox>
          <div
            className="m-schedule-diagram__filter c-form__input-container"
          >
            <label
              className="sr-only"
              htmlFor="stop-search"
            >
              Search for a stop
            </label>
            <input
              className="c-form__input"
              id="stop-search"
              onChange={[Function]}
              placeholder="Search for a stop"
              type="text"
              value=""
            />
            <button
              aria-label="search"
              className="c-form__submit-btn"
              onClick={[Function]}
              type="button"
            >
              <span
                aria-hidden="false"
                className="notranslate c-svg__icon-search-reverse-default"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "SVG",
                  }
                }
              />
            </button>
          </div>
        </SearchBox>
        <Provider>
          <LineDiagramWithStops>
            <div
              className="m-schedule-diagram"
            >
              <SimpleDiagram>
                <svg
                  aria-labelledby="diagram-title diagram-desc"
                  className="line-diagram-svg ferry"
                  height="100%"
                  role="img"
                  style={
                    Object {
                      "left": 5,
                      "overflow": "visible",
                    }
                  }
                  width="36px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title
                    id="diagram-title"
                  >
                    Line diagram for 
                    route 1
                  </title>
                  <desc
                    id="diagram-desc"
                  >
                    0 stops going Inbound to End
                  </desc>
                  <defs>
                    <pattern
                      height="10"
                      id="diagonalHatch"
                      patternTransform="rotate(45 0 0)"
                      patternUnits="userSpaceOnUse"
                      width="10"
                    >
                      <line
                        className="line-diagram-svg__line"
                        strokeWidth="16px"
                        y2={8}
                      />
                    </pattern>
                  </defs>
                </svg>
              </SimpleDiagram>
              <ol />
              <OtherStopList />
            </div>
          </LineDiagramWithStops>
        </Provider>
      </div>
    </LineDiagram>
  </ScheduleDirection>
</Provider>
`;

exports[`ScheduleDirectionTest respects the initially selected pattern ID, if specified 1`] = `
<Provider>
  <ScheduleDirection>
    <div
      className="m-schedule-direction"
    >
      <div
        className="m-schedule-direction__direction"
        id="direction-name"
      >
        Outbound
      </div>
      <ScheduleDirectionMenu>
        <div
          className="js-m-schedule-click-boundary"
        >
          <BusMenuSelect>
            <div
              className="m-schedule-direction__route-pattern m-schedule-direction__route-pattern--clickable notranslate"
              onClick={[Function]}
              onKeyUp={[Function]}
              role="button"
              tabIndex={0}
            >
              Pattern 3
               
              <span
                aria-hidden="true"
                className="notranslate c-svg__icon m-schedule-direction__route-pattern-arrow"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "SVG",
                  }
                }
              />
            </div>
          </BusMenuSelect>
        </div>
      </ScheduleDirectionMenu>
      <ScheduleDirectionButton>
        <button
          className="m-schedule-direction__button btn btn-primary"
          onClick={[Function]}
          type="button"
        >
          <span
            aria-hidden="true"
            className="notranslate m-schedule-direction__icon"
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
          />
          Change Direction
        </button>
      </ScheduleDirectionButton>
    </div>
    <LineDiagram>
      <div
        className="mb-4"
      >
        <h3
          className="m-schedule-diagram__heading"
        >
          Stops
        </h3>
        <SearchBox>
          <div
            className="m-schedule-diagram__filter c-form__input-container"
          >
            <label
              className="sr-only"
              htmlFor="stop-search"
            >
              Search for a stop
            </label>
            <input
              className="c-form__input"
              id="stop-search"
              onChange={[Function]}
              placeholder="Search for a stop"
              type="text"
              value=""
            />
            <button
              aria-label="search"
              className="c-form__submit-btn"
              onClick={[Function]}
              type="button"
            >
              <span
                aria-hidden="false"
                className="notranslate c-svg__icon-search-reverse-default"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "SVG",
                  }
                }
              />
            </button>
          </div>
        </SearchBox>
        <Provider>
          <LineDiagramWithStops>
            <div
              className="m-schedule-diagram"
            >
              <SimpleDiagram>
                <svg
                  aria-labelledby="diagram-title diagram-desc"
                  className="line-diagram-svg bus"
                  height="100%"
                  role="img"
                  style={
                    Object {
                      "left": 5,
                      "overflow": "visible",
                    }
                  }
                  width="36px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title
                    id="diagram-title"
                  >
                    Line diagram for 
                    route 1
                  </title>
                  <desc
                    id="diagram-desc"
                  >
                    0 stops going Outbound to Begin
                  </desc>
                  <defs>
                    <pattern
                      height="10"
                      id="diagonalHatch"
                      patternTransform="rotate(45 0 0)"
                      patternUnits="userSpaceOnUse"
                      width="10"
                    >
                      <line
                        className="line-diagram-svg__line"
                        strokeWidth="16px"
                        y2={8}
                      />
                    </pattern>
                  </defs>
                </svg>
              </SimpleDiagram>
              <ol />
              <OtherStopList />
            </div>
          </LineDiagramWithStops>
        </Provider>
      </div>
    </LineDiagram>
  </ScheduleDirection>
</Provider>
`;
